<resources>
    <string name="app_name">Capptan Pautas</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="save">Salvar</string>
    <string name="details">Detalhes</string>
    <string name="actor">Autor</string>
    <string name="new_schedule">Nova pauta</string>
    <string name="finalize">Finalizar</string>
    <string name="reopen">Reabrir</string>
    <string name="schedule_saved">Pauta salva</string>
    <string name="schedule_error">Falha ao salvar pauta</string>
    <string name="register">Cadastro</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="failed_save_user">Falha ao salvar usuário</string>
    <string name="pass">Senha</string>
    <string name="login">Entrar</string>
    <string name="invalid_login">Dados incorretos</string>
    <string name="open">Abertas</string>
    <string name="finished">Finalizadas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">Sem pautas neste estado</string>
</resources>
